<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/access_token_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/login__access_token" />

    <EditText
        android:id="@+id/access_token_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/access_token_text_view"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="@string/login__access_token"
        android:singleLine="true" />

    <TextView
        android:id="@+id/team_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/access_token_edit_text"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/login__team_name" />

    <EditText
        android:id="@+id/team_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team_name_text_view"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="@string/login__team_name"
        android:singleLine="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team_name_edit_text"
        android:layout_centerHorizontal="true"
        android:text="@string/login__login" />

    <FrameLayout
        android:id="@+id/progressbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</RelativeLayout>